--- a/roles/home.vector/files/vector.toml
+++ b/roles/home.vector/files/vector.toml
@@ -1,35 +1,38 @@
 [sources.docker-local]
-  type = "docker_logs"
-  docker_host = "/var/run/docker.sock"
-  exclude_containers = []
- 
-  # Identify zero-width space as first line of a multiline block.
-  multiline.condition_pattern = '^\x{200B}' # required
-  multiline.mode = "halt_before" # required
-  multiline.start_pattern = '^\x{200B}' # required
-  multiline.timeout_ms = 1000 # required, milliseconds
- 
+type = "docker_logs"
+docker_host = "/var/run/docker.sock"
+exclude_containers = []
+
+# Identify zero-width space as first line of a multiline block.
+multiline.condition_pattern = '^\x{200B}' # required
+multiline.mode = "halt_before" # required
+multiline.start_pattern = '^\x{200B}' # required
+multiline.timeout_ms = 1000 # required, milliseconds
+
 [sinks.loki]
-  # General
-  type = "loki" # required
-  inputs = ["docker*"] # required
-  endpoint = "VECTOR_LOKI_HOST" # required
-  
-  # Auth
-  auth.strategy = "bearer" # required
-  auth.token = "none" # required
-  
-  # Encoding
-  encoding.codec = "json" # required
-  
-  # Healthcheck
-  healthcheck.enabled = false # optional, default
-  
-  # Loki Labels
-  labels.forwarder = 'vector'
-  labels.host = '{{ host }}'
-  labels.container_name = '{{ container_name }}'
-  labels.compose_service = '{{ label.com\.docker\.compose\.service }}'
-  labels.compose_project = '{{ label.com\.docker\.compose\.project }}'
-  labels.source = '{{ stream }}'
-  labels.category = 'dockerlogs'
+# General
+type = "loki" # required
+inputs = ["docker*"] # required
+endpoint = "VECTOR_LOKI_HOST" # required
+
+# Auth
+auth.strategy = "bearer" # required
+auth.token = "none" # required
+
+# Encoding
+encoding.codec = "json" # required
+
+# Compression
+# compression = "none"
+
+# Healthcheck
+# healthcheck.enabled = false # optional, default
+
+# Loki Labels
+labels.forwarder = 'vector'
+labels.host = '{{ host }}'
+labels.container_name = '{{ container_name }}'
+labels.compose_service = '{{ label.com\.docker\.compose\.service }}'
+labels.compose_project = '{{ label.com\.docker\.compose\.project }}'
+labels.source = '{{ stream }}'
+labels.category = 'dockerlogs'
