--- a/host_vars/dumbledore.yml
+++ b/host_vars/dumbledore.yml
@@ -1,1 +1,5 @@
 pironman_tools_directory: /home/albus/pironman
+
+vector_config_directory: /home/albus/app_config/vector
+
+home_assistant_dir: /home/albus/app_config/homeassistant
