WIP on home assistant with mosquitto and ztomqtt

--- a/host_vars/dumbledore.yml
+++ b/host_vars/dumbledore.yml
@@ -3,3 +3,6 @@ pironman_tools_directory: /home/albus/pironman
 vector_config_directory: /home/albus/app_config/vector
 
 home_assistant_dir: /home/albus/app_config/homeassistant
+
+# mosquitto_dir: /home/albus/app_config/mosquitto
+# zigbee2mqtt_dir: /home/albus/app_config/zigbee2mqtt
