--- a/roles/home.home-assistant/handlers/main.yml
+++ b/roles/home.home-assistant/handlers/main.yml
@@ -2,3 +2,14 @@
   community.docker.docker_container:
     name: homeassistant
     restart: true
+
+# - name: Restart mosquitto container
+#   community.docker.docker_container:
+#     name: mosquitto
+#     restart: true
+
+# - name: Restart zigbee2mqtt container
+#   community.docker.docker_container:
+#     name: zigbee2mqtt
+#     restart: true
+
