--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,6 +2,9 @@
     "image": "mcr.microsoft.com/devcontainers/python:3",
   
     "customizations": {
+      "settings": {
+        "workbench.colorTheme": "GitHub Dark"
+      },
       "vscode": {
         "extensions": [
             "streetsidesoftware.code-spell-checker"
