--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-    "image": "mcr.microsoft.com/devcontainers/python:3",
+    "build": { "dockerfile": "./Dockerfile" },
   
     "customizations": {
       "vscode": {
