--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-    "build": { "dockerfile": "./Dockerfile" },
+    "build": { "dockerfile": "./Dockerfile.dev" },
   
     "customizations": {
       "settings": {
