--- a/.drone.yml
+++ b/.drone.yml
@@ -1,25 +1,25 @@
-kind: pipeline
-name: ci
-type: docker
+# kind: pipeline
+# name: ci
+# type: docker
 
-platform:
-  os: linux
-  arch: arm64
+# platform:
+#   os: linux
+#   arch: arm64
 
-trigger:
-  branch:
-    - main
+# trigger:
+#   branch:
+#     - main
 
-steps:
-  - name: Publish dev image
-    image: plugins/docker
-    settings:
-      registry: https://registry.nas.local.abbottland.io
-      username: pbabbott
-      password:
-        from_secret: REGISTRY_PASSWORD
-      mirror: https://registry-mirror.nas.local.abbottland.io
-      repo: registry.nas.local.abbottland.io/home-playbooks-dev
-      auto_tag: true
-      dockerfile: ./.devcontainer/Dockerfile.dev
-      context: ./.devcontainer/  
+# steps:
+#   - name: Publish dev image
+#     image: plugins/docker
+#     settings:
+#       registry: https://registry.nas.local.abbottland.io
+#       username: pbabbott
+#       password:
+#         from_secret: REGISTRY_PASSWORD
+#       mirror: https://registry-mirror.nas.local.abbottland.io
+#       repo: registry.nas.local.abbottland.io/home-playbooks-dev
+#       auto_tag: true
+#       dockerfile: ./.devcontainer/Dockerfile.dev
+#       context: ./.devcontainer/  
