--- a/ansible.cfg
+++ b/ansible.cfg
@@ -4,3 +4,4 @@ collections_path = ./
 inventory = ./inventory.yml
 show_custom_stats = yes
 vault_password_file = vault_pass.txt
+host_key_checking = False
