--- a/.devcontainer/Dockerfile.dev
+++ b/.devcontainer/Dockerfile.dev
@@ -16,6 +16,9 @@ ARG USER=coder
 RUN useradd --groups sudo --no-create-home --shell /bin/bash ${USER} \
 	&& echo "${USER} ALL=(ALL) NOPASSWD:ALL" >/etc/sudoers.d/${USER} \
 	&& chmod 0440 /etc/sudoers.d/${USER}
+
+RUN mkdir -p /home/${USER} && chown -R ${USER} /home/${USER}
+
 USER ${USER}
 WORKDIR /home/${USER}
 
