--- a/.devcontainer/Dockerfile.dev
+++ b/.devcontainer/Dockerfile.dev
@@ -1,5 +1,6 @@
 FROM python:3
 
+# Install packages with apt
 RUN apt-get update \
 	&& apt-get install -y \
 	curl \
@@ -10,18 +11,24 @@ RUN apt-get update \
 	wget \
 	jq \
 	sshpass \
+	zsh \
 	&& rm -rf /var/lib/apt/lists/*
 
+# Setup user and home dir
 ARG USER=coder
 RUN useradd --groups sudo --no-create-home --shell /bin/bash ${USER} \
 	&& echo "${USER} ALL=(ALL) NOPASSWD:ALL" >/etc/sudoers.d/${USER} \
 	&& chmod 0440 /etc/sudoers.d/${USER}
 
-RUN mkdir -p /home/${USER} && chown -R ${USER} /home/${USER}
+RUN mkdir -p /home/${USER} \
+	&& chown -R ${USER} /home/${USER}
 
 USER ${USER}
 WORKDIR /home/${USER}
 
+ENV PATH="${PATH}:/home/${USER}/.local/bin"
+
+# Install pip packages
 RUN pip3 install \
     ansible \
     paramiko \
