Add note on vector eating up disk

--- a/playbooks/grafana_loki/main.yml
+++ b/playbooks/grafana_loki/main.yml
@@ -4,6 +4,7 @@
   roles:
     - role: home.grafana-loki
 
+#TODO: Vector eats up too much log disk space
 - name: Use docker to setup vector
   hosts:
     - room_of_requirement
