--- a/playbooks/base_app_infra/files/pihole/02-internal.conf
+++ b/playbooks/base_app_infra/files/pihole/02-internal.conf
@@ -11,3 +11,6 @@ address=/.nas.local.abbottland.io/192.168.4.144
 
 domain=raspberrypi.local.abbottland.io
 address=/.raspberrypi.local.abbottland.io/192.168.4.144
+
+domain=dumbledore.local.abbottland.io
+address=/.dumbledore.local.abbottland.io/192.168.4.144
