--- a/playbooks/vpn/main.yml
+++ b/playbooks/vpn/main.yml
@@ -12,6 +12,10 @@
         project_name: wireguard
         definition:
           version: "3.7"
+          networks:
+            network-pihole:
+              name: "custom-dns"
+              external: true
           services:
             wireguard:
               image: ghcr.io/linuxserver/wireguard
@@ -20,6 +24,8 @@
                 - NET_ADMIN
                 - SYS_MODULE
               restart: always
+              dns:
+                - 172.31.0.2          # internal Docker Address of pihole
               environment:
                 PUID: "{{ host_puid }}"
                 PGID: "{{ host_pgid }}"
@@ -34,3 +40,6 @@
                 - 51820:51820/udp
               sysctls:
                 - net.ipv4.conf.all.src_valid_mark=1
+              networks:
+                network-pihole:
+                  ipv4_address: 172.31.0.3
