--- a/playbooks/mealie/main.yml
+++ b/playbooks/mealie/main.yml
@@ -1,4 +1,4 @@
-- name: Instal meaile on target
+- name: Install meaile on target
   hosts: rpi
   tasks:
     - name: Ensure mealie_data_dir exists
@@ -12,6 +12,7 @@
 
         definition:
           version: "3.1"
+          # TODO: no need for external network here
           networks:
             default:
               name: lsio
