Update prometheus to work on NAS

--- a/host_vars/room_of_requirement.yml
+++ b/host_vars/room_of_requirement.yml
@@ -45,3 +45,5 @@ vector_compose_service_network:
 
 docker_daemon_loki_log_sink: localhost:3100
 docker_daemon_directory: /volume1/Docker
+
+prometheus_config_dir: /volume1/Docker/prometheus/config
