Move mealie onto dumbledore

--- a/host_vars/dumbledore.yml
+++ b/host_vars/dumbledore.yml
@@ -15,3 +15,4 @@ drone_data_dir: /home/albus/app_config/drone/data
 portainer_data_dir: /home/albus/app_config/portainer_data
 
 dashy_config_dir: /home/albus/app_config/dashy
+mealie_data_dir: /home/albus/app_config/mealie_data
